--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h5,
 h6 {
   font-weight: 700;
   line-height: 1.5em;
+  margin: 0 0 15px;
 }
 
 a {
@@ -30,6 +31,19 @@ a {
 .content {
   width: 1170px;
   margin: 0 auto;
+}
+
+#scrollUp {
+  height: 25px;
+  width: 38px;
+  bottom: 5px;
+  right: 5px;
+  display: block;
+  background: #6a3144;
+  color: #fff;
+  padding-top: 9px;
+  font-size: 22px;
+  text-align: center;
 }
 
 /* Top Header Area */
@@ -234,5 +248,240 @@ a {
   width: 50%;
   float: right;
 }
-.welcome_area .right_welcome img {
+/* .welcome_area .right_welcome img {
+} */
+
+/* Sevrice Area */
+.service_area {
+  background: #f5f5f5;
+  padding: 50px 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.service_area .inner_service {
+  overflow: hidden;
+}
+
+.service_area .inner_service h2.title {
+  text-align: center;
+  color: #6a3144;
+  font-size: 48px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.service_area .inner_service p.sub_title {
+  text-align: center;
+  font-size: 18px;
+}
+
+.service_area .main_service {
+  width: 100%;
+  overflow: hidden;
+  margin-top: 20px;
+}
+.service_area .child_service {
+  width: 225px;
+  padding: 130px 60px 80px 105px;
+  float: left;
+  position: relative;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.service_area .child_service:hover {
+  background: #fff;
+  box-shadow: 10px 10px 10px #ddd;
+}
+
+.service_area .child_service h3 {
+  color: #523827;
+  font-size: 100px;
+  font-weight: 700;
+  font-family: 'Oswald', sans-serif;
+  opacity: 0.1;
+  position: absolute;
+  left: 60px;
+  top: 60px;
+}
+.service_area .child_service h4 {
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 28px;
+}
+.service_area .child_service h4 a {
+  color: #523827;
+}
+/* .service_area .child_service h4:hover a {
+} */
+.service_area .child_service p {
+  color: #000000;
+  font-size: 14px;
+  opacity: 0.5;
+}
+
+/* Contact Area */
+
+.contact_area {
+  background: url(img/contact_image.jpg);
+  background-size: cover;
+  background-color: #101f38;
+  padding: 50px 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.contact_area .inner_contact {
+  width: 900px;
+  max-width: 100%;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.contact_area .inner_contact h2.title {
+  text-align: center;
+  font-weight: 400;
+  font-family: 'Oswald', sans-serif;
+  color: #fff;
+  font-size: 36px;
+}
+
+.contact_area .main_contact_form {
+  width: 100%;
+  overflow: hidden;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.contact_area .main_contact_form input {
+  background: #fff;
+  border: 0;
+  width: 42%;
+  padding: 15px;
+  float: left;
+  margin: 0 1% 2%;
+  border-radius: 5px;
+}
+.contact_area .main_contact_form textarea {
+  background: #fff;
+  border: 0;
+  width: 92%;
+  margin: 0 1% 2%;
+  padding: 15px 3%;
+  border-radius: 5px;
+  min-height: 100px;
+}
+.contact_area .main_contact_form input[type='submit'] {
+  background: #97455f;
+  width: 250px;
+  margin: 0 auto;
+  float: none;
+  color: #fff;
+  font-size: 21px;
+  font-weight: 600;
+  text-transform: uppercase;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.contact_area .main_contact_form input[type='submit']:hover {
+  background: #6a3144;
+}
+
+/* Footer Area */
+
+.footer_area {
+  background: #fff;
+  padding: 30px 0;
+  width: 100%;
+  overflow: hidden;
+}
+.footer_area .inner_footer {
+  overflow: hidden;
+}
+.footer_area .footer_logo {
+  width: 420px;
+  max-width: 80%;
+  margin: 0 auto 20px;
+  text-align: center;
+}
+.footer_area .copyright_area {
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+}
+.footer_area .copyright_area p {
+  color: #6a3144;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+/* Tablet layout */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .content {
+    width: 98%;
+  }
+  .slider_area .bx-wrapper .bx-pager.bx-default-pager a {
+    border: 3px solid #6a3144;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+  }
+  .welcome_area .left_welcome {
+    width: 96%;
+  }
+  .welcome_area .right_welcome {
+    width: 100%;
+    margin-top: 20px;
+  }
+  .welcome_area .right_welcome img {
+    width: 100%;
+    height: auto;
+  }
+  .welcome_area,
+  .service_area {
+    padding: 20px 0;
+  }
+  .service_area .inner_service h2.title {
+    font-size: 15px;
+  }
+  .service_area .inner_service p.sub_title {
+    font-size: 15px;
+  }
+  .service_area .child_service {
+    padding: 130px 60px 80px 84px;
+  }
+}
+
+/* Mobile layout */
+@media only screen and (min-width: 200px) and (max-width: 767px) {
+  .top_header_area .social_area {
+    width: 100%;
+  }
+  .top_header_area .social_area ul {
+    text-align: center;
+  }
+  .top_header_area .search_area {
+    display: none;
+  }
+  .service_area .child_service {
+    padding: 50px 50px 40px 70px;
+  }
+  .contact_area .main_contact_form input[type='submit'] {
+    width: 200px;
+    font-size: 15px;
+  }
+  .footer_area .footer_logo {
+    width: 200px;
+  }
+  .footer_area .footer_logo img {
+    max-width: 100%;
+  }
+  .slider_area .bx-pager {
+    bottom: 15px;
+  }
 }
